--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -43,4 +43,12 @@
         android:layout_height="wrap_content"
         android:text="Status" />
 
+    <Button
+        android:id="@+id/rentCarButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="เช่ารถ"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/white"/>
+
 </LinearLayout>
