--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:padding="16dp">
 
         <EditText
             android:id="@+id/nameEditText"
@@ -30,13 +27,17 @@
             android:id="@+id/startDateEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="วันที่เริ่มต้น (yyyy-MM-dd)" />
+            android:hint="วันที่เริ่มต้น (yyyy-MM-dd)"
+            android:focusable="false"
+            android:clickable="true" />
 
         <EditText
             android:id="@+id/startTimeEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="เวลาเริ่มต้น (HH:mm)" />
+            android:hint="เวลาเริ่มต้น (HH:mm)"
+            android:focusable="false"
+            android:clickable="true"/>
 
         <EditText
             android:id="@+id/phoneEditText"
@@ -48,13 +49,17 @@
             android:id="@+id/endDateEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="วันที่สิ้นสุด (yyyy-MM-dd)" />
+            android:hint="วันที่สิ้นสุด (yyyy-MM-dd)"
+            android:focusable="false"
+            android:clickable="true"/>
 
         <EditText
             android:id="@+id/endTimeEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="เวลาสิ้นสุด (HH:mm)" />
+            android:hint="เวลาสิ้นสุด (HH:mm)"
+            android:focusable="false"
+            android:clickable="true"/>
 
         <EditText
             android:id="@+id/carModelEditText"
@@ -83,4 +88,4 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>ห
+</LinearLayout>
