input ProfileFragment.kt edit LoginFragment.kt

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -51,4 +51,7 @@
     <item name="tvName" type="id" />
     <item name="tvSurname" type="id" />
     <item name="tvStatus" type="id" />
+    <item name="first_name_text" type="id" />
+    <item name="last_name_text" type="id" />
+    <item name="phone_text" type="id" />
 </resources>
