--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,8 +6,8 @@
         android:title="หน้าหลัก" />
     <item
         android:id="@+id/search"
-        android:icon="@drawable/search"
-        android:title="ค้นหา" />
+        android:icon="@drawable/baseline_directions_car_24"
+        android:title="ประวัติการเช่ารถ" />
     <item
         android:id="@+id/profile"
         android:icon="@drawable/ic_profile"
