--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,12 @@
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.carbookingapp.RegisterFragment"
-        android:label="RegisterFragment" />
+        android:label="RegisterFragment">
+        <!-- เชื่อมโยงไปยัง LoginFragment -->
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
     <!-- Fragment สำหรับหน้า Home -->
     <fragment
@@ -17,9 +22,10 @@
         android:name="com.example.carbookingapp.HomeFragment"
         android:label="HomeFragment" />
 
-    <!-- การเชื่อมต่อระหว่าง RegisterFragment และ HomeFragment -->
-    <action
-        android:id="@+id/action_registerFragment_to_homeFragment"
-        app:destination="@id/fragment_home" />
+    <!-- Fragment สำหรับหน้า Login -->
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.carbookingapp.LoginFragment"
+        android:label="LoginFragment" />
 
 </navigation>
