--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -54,4 +54,6 @@
     <item name="first_name_text" type="id" />
     <item name="last_name_text" type="id" />
     <item name="phone_text" type="id" />
+    <item name="action_registerFragment_to_loginFragment" type="id" />
+    <item name="loginFragment" type="id" />
 </resources>
